# TelebotCpp

./: Bot.h  CMakeLists.txt  Localisation.xml  LogConfig.xml  LogConfigDebug.xml  LogConfigRelease.xml
MyBot/: MyBot.cpp  MyBot.h  User.h
include/: Bot.h  DbProvider.h  MyBot.h  OpenAI.h  Telebot.h
include/Common/: CancellationToken.h  CancellationTokenSource.h  ErrorCode.h  ErrorInfo.h  ErrorTrace.h  Event.h  FunctionHandler.h  HttpContext.h  HttpsClient.h  IEventHandler.h  JsonMacros.h  MethodHandler.h  StaticMethodHandler.h
include/Db/: DbConnection.h  DbPool.h
include/MyBot/: DbCash.h  DbRequest.h  Environment.h  LanguageCode.h  MyBot.h
include/MyBot/Types/: DalleSettings.h  DbMacros.h  GptSettings.h  Language.h  Role.h  Size.h  User.h  WhisperSettings.h
include/OpenAI/: ChatGpt.h  Dalle.h  GptModel.h  GptTurbo.h  OpenAIApi.h  OpenAIModel.h  OpenAiModel.h  Whisper.h
include/OpenAI/Types/: ChatCompletionsRequest.h  ChatCompletionsResponse.h  ChatRequestBody.h  ChatResponseBody.h  CreateImageRequest.h  CreateImageResponse.h  FileInfo.h  Message.h  Size.h  TranscriptionsRequest.h  Usage.h
include/Telebot/: Api.h  Bot.h  BotApi.h  CancellationToken.h  CancellationTokenSource.h  Configuration.h  Event.h  EventHandler.h  HttpClient.h  HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h  HttpsClient.h  IEventHandler.h  JsonMacros.h  MethodHandler.h  StaticMethodHandler.h  TelebotApi.h
include/Telebot/Types/: Animation.h  Audio.h  BotCommand.h  BotCommandScope.h  BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatAdministratorRights.h  ChatInviteLink.h  ChatJoinRequest.h  ChatLocation.h  ChatMember.h  ChatMemberAdministrator.h  ChatMemberBanned.h  ChatMemberLeft.h  ChatMemberMember.h  ChatMemberOwner.h  ChatMemberRestricted.h  ChatMemberUpdated.h  ChatPermissions.h  ChatPhoto.h  ChatShared.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  EncryptedCredentials.h  EncryptedPassportElement.h  File.h  ForceReply.h  ForumTopic.h  ForumTopicClosed.h  ForumTopicCreated.h  (+106 more)
libs/: pugixml.hpp
libs/PugiXml/: pugixml.cpp
src/: Api.cpp  Bot.cpp  CancellationToken.cpp  CancellationTokenSource.cpp  Configuration.cpp  HttpClient.cpp  HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpsClient.cpp  Telebot.cpp
src/Common/: CancellationToken.cpp  CancellationTokenSource.cpp  ErrorInfo.cpp  ErrorTrace.cpp  HttpContext.cpp  HttpsClient.cpp
src/Db/: DbConnection.cpp  DbPool.cpp
src/DbProvider/: DbPool.cpp  DbProvider.cpp
src/MyBot/: DbCash.cpp  DbRequest.cpp  Environment.cpp  MyBot.cpp
src/OpenAI/: ChatGpt.cpp  Dalle.cpp  GptModel.cpp  GptTurbo.cpp  OpenAI.cpp  OpenAIApi.cpp  OpenAIModel.cpp  OpenAiModel.cpp  Whisper.cpp
src/Telebot/: Bot.cpp  BotApi.cpp  Telebot.cpp  TelebotApi.cpp
src/Telebot/Types/: GenericReply.cpp
src/Types/: BotCommandScope.cpp  InputFile.cpp  InputMedia.cpp  InputMessageContent.cpp  MenuButton.cpp  PassportElementError.cpp
tests/: HttpsClientTests.cpp
